# markdown-to-json

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  bash_tests.sh  pyproject.toml  setup.cfg  setup.py  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  tox.yml
bids_writer/: dict_renderer.py  html_parser.py  json_writer.py  node_formatters.py  parser.py
examples/: chinese.md  complicated.md  example.html  from_readme.md  issue_10.md  list.md  same.md  simple.md
examples/mixed/: bad_nest.md  issue_4.md  issue_8.md  issue_8_part2.md
markdown_to_json/: __init__.py  __main__.py  _metadata.py  dict_renderer.py  json_writer.py  markdown_to_json.py
markdown_to_json/scripts/: md_to_json.py
tests/: test_empty_values_list.py  test_example_files.py  test_lists.py  test_mixed_content.py  test_sugar_methods.py  test_unicode.py  util.py
tests/test_01/: test_markdown_to_json.py
tests/test_02/: test_markdown_to_json.py
tests/test_02/test_scripts/: test_md_to_json.py
